--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>¿Rosita,Queres ser mi San Valentín?</h1>
         <div class="buttons">
             <button id="btnSi">Sí</button>
-            <button id="btnNo">No</button>
+           <button id="btnNo" class="boton-no">No</button>
         </div>
     </div>
 
@@ -27,4 +27,5 @@
 </div>
     <script src="script.js"></script>
 </body>
+
 </html>
