--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
 </head>
 <body>
 
-  <div id="main-card" class="container">
+<div id="main-card" class="container">
+    
     <div id="contenido-inicial">
         <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHFpdTM4a2pteXZybWttYm1rOGtud29zbDFlNzUxNnl4bmVvcGdmcyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/92YG8KKSjYhMc/giphy.gif" class="main-img">
-        <h1>¿Rosita,Queres ser mi San Valentín?</h1>
-        <div class="buttons">
+        <h1>¿Rosita, Queres ser mi San Valentín?</h1>
+
+        <div class="buttons-container">
             <button id="btnSi">Sí</button>
-           <button id="btnNo" class="boton-no">No</button>
+            <button id="btnNo">No</button>
         </div>
     </div>
 
     <div id="mensajeFinal" style="display: none;">
         <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHFpdTM4a2pteXZybWttYm1rOGtud29zbDFlNzUxNnl4bmVvcGdmcyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/92YG8KKSjYhMc/giphy.gif" class="main-img">
         <h2 style="color: #d63384;">Te amo mucho mulher mia ❤️</h2>
-        <p>Felizzz san Valentín preciosa </p>
+        <p>Feliz San Valentín preciosa</p>
     </div>
-</div>
-    <script src="script.js"></script>
-</body>
 
+</div>
+
+<script src="script.js"></script>
+</body>
 </html>
