--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Para Rosita ❤️</title>
+<title>¿Rosita, querés ser mi San Valentín?</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
@@ -14,11 +14,11 @@
 </head>
 <body>
 
-<audio id="musica" loop>
+<!-- Música -->
+<audio id="musica" autoplay loop>
   <source src="https://cdn.pixabay.com/download/audio/2022/10/30/audio_6e6d6bda58.mp3?filename=romantic-love-115764.mp3" type="audio/mpeg">
 </audio>
 
-<canvas id="backgroundCanvas"></canvas>
 <canvas id="flowerCanvas"></canvas>
 
 <div id="envelope">
@@ -27,7 +27,7 @@
 
       <div id="contenido-inicial">
           <img src="https://media2.giphy.com/media/92YG8KKSjYhMc/giphy.gif" class="main-img">
-          <h1 id="typedText"></h1>
+          <h1>¿Rosita, querés ser mi San Valentín?</h1>
 
           <div class="buttons-container">
               <button id="btnSi">Sí 💖</button>
@@ -36,8 +36,9 @@
       </div>
 
       <div id="mensajeFinal">
-          <h2>Te amo infinitamente ❤️</h2>
-          <p>Gracias por existir, mi amor.</p>
+          <img src="https://media2.giphy.com/media/92YG8KKSjYhMc/giphy.gif" class="main-img">
+          <h2>Te amo mucho mulher mia ❤️</h2>
+          <p>Feliz San Valentín preciosa</p>
       </div>
 
   </div>
@@ -46,4 +47,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
