--- a/index.html
+++ b/index.html
@@ -5,30 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Rosita, Queres ser mi San Valentín?</title>
 
-    <!-- Fuente romántica -->
+    <!-- Fuente más linda -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 
-    <!-- Confetti -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
 
-<!-- Música -->
-<audio id="musica" loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mp3">
-</audio>
-
 <div id="main-card" class="container">
-
-    <!-- Carta cerrada -->
-    <div id="carta" class="carta">
-        💌 Tócame
-    </div>
-
-    <!-- Contenido -->
-    <div id="contenido-inicial" style="display:none;">
+    <div id="contenido-inicial">
         <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHFpdTM4a2pteXZybWttYm1rOGtud29zbDFlNzUxNnl4bmVvcGdmcyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/92YG8KKSjYhMc/giphy.gif" class="main-img">
         <h1>¿Rosita, querés ser mi San Valentín?</h1>
 
@@ -43,7 +30,6 @@
         <h2>Te amo mucho mujer mía ❤️</h2>
         <p>Feliz San Valentín preciosa 💕</p>
     </div>
-
 </div>
 
 <script src="script.js"></script>
